updated index text

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world! Looks Good is Good </h1>
+    <h1>Hello, world! Looks Good is Good edit </h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
