changed text to its hot

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>This is coot </h1>
+    <h1>This is hot </h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
