added bootstrap and webpack

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>My Awesome application</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><script defer src="index.js"></script></head>
+  </head>
 
   <body>
     <h1>Hello is219</h1>
