--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>Hello is219</h1>
+    <h1>Bootstrap and Webpack Work</h1>
 
     <h3>Welcome to the Awesome application</h3>
 
