added bootrap icons

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,7 @@
   <body>
     <h1>Bootstrap and Webpack Work</h1>
 
-    <h3>Welcome to the Awesome application</h3>
-
-    <my-app></my-app>
+    <h3><i class="bi-alarm" style="font-size: 3rem;"></i> Welcome to the Awesome application</h3>
 
 
   </body>
