--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <h1>Hello World</h1>
+    <h1>IS 218 hellow live reload</h1>
 
     <h3><i class="bi-alarm" style="font-size: 3rem;"></i> Welcome to the Awesome application</h3>
 
