--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link" href="http://www.njit.edu">NJIT</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
