--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,72 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html
+<html lang="EN">
+<head>
+    <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
     <meta charset="UTF-8">
     <title>My Awesome application</title>
-  </head>
+    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
 
-  <body>
+    <!--theme colors -->
+    <meta name="theme-color" content="" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <!--Basic meta info -->
+    <meta name="keywords" content="">
+    <meta name="author" content="Bhupesh Varshney" />
+    <meta name="description" content="">
+
+    <!--OpenGraph meta -->
+    <meta property="og:description" content=""/>
+    <meta property="og:title" content="" />
+    <meta property="og:image" content="logo.png"/>
+    <meta property="og:url" content="" />
+
+    <!--meta for twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@bhupeshimself">
+    <meta name="twitter:title" content="">
+    <meta name="twitter:image" content="logo.png">
+    <meta name="twitter:site" content="@bhupeshimself">
+    <meta name="twitter:description" content="">
+
+    <!--Favicon-->
+    <link rel="shortcut icon" type="image/png" href="logo.png"/>
+
+    <!-- Manifest for PWA -->
+    <link rel="manifest" href="manifest.json">
+
+</head>
+
+<body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/">MyWebClass</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="http://www.njit.edu">NJIT</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
-        </li>
-      </ul>
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">MyWebClass</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="http://www.njit.edu">NJIT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                </li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 
 
-
-  </body>
+</body>
 </html>
