--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
     <meta charset="UTF-8">
-    <title>My Awesome application</title>
+    <title>MyWebClass.org</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
 
     <!--theme colors -->
