--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html
 <html lang="EN">
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
     <meta charset="UTF-8">
     <title>MyWebClass.org</title>
     <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--theme colors -->
     <meta name="theme-color" content="" />
     <meta name="apple-mobile-web-app-status-bar-style" content="">
