fixing w3c validation errors

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
     <meta charset="UTF-8">
     <title>MyWebClass.org</title>
-    <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+    <meta content='text/html'>
+    <meta http-equiv='Content-Type'>
+    <meta charset=utf-8' >
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--theme colors -->
     <meta name="theme-color" content="" />
