added the article page

--- a/src/article.html
+++ b/src/article.html
@@ -3,7 +3,7 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org</title>
+    <title>MyWebClass.org | Article Title</title>
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
     <meta name="author" content="Keith Williams" />
-    <meta name="description" content="A project to provide educational resources to web development teachers">
+    <meta name="description" content="An article about something.">
 
     <!--OpenGraph meta -->
     <meta property="og:title" content="" />
@@ -42,17 +42,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    <a class="nav-link "  href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="article.html">Article</a>
+                    <a class="nav-link active" href="article.html" aria-current="page">Article</a>
                 </li>
 
             </ul>
         </div>
     </div>
 </nav>
+<h1>Article</h1>
 
-<h1>Homepage</h1>
+
 </body>
 </html>
