--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="article.html">Article</a>
+                    <a class="nav-link" href="articles.html">Articles</a>
                 </li>
 
             </ul>
