added installation page and title

--- a/src/article.html
+++ b/src/article.html
@@ -47,7 +47,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="articles.html">Articles</a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="installation.html">Install Instructions</a>
+                </li>
             </ul>
         </div>
     </div>
