making a nicer homepage

--- a/src/index.html
+++ b/src/index.html
@@ -58,17 +58,16 @@
         </header>
         <main>
             <div class="container my-5">
-                <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
-                  <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-                    <h1 class="display-4 fw-bold lh-1">Border hero with cropped image and shadows</h1>
-                    <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+                <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
+                  <div class="col-lg-7 p-3 p-lg-5 pt-lg-1">
+                    <h1 class="display-6 fw-bold lh-1">Revolutionize your Teaching</h1>
+                    <p class="lead">Empower your students with cutting-edge web development skills. Join MyWebClass and discover advanced technologies that will transform your teaching and their learning journey.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                      <button type="button" class="btn btn-primary btn-lg px-4 me-md-2 fw-bold">Primary</button>
-                      <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
+                      <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start Here</button>
                     </div>
                   </div>
-                  <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                      <img class="rounded-lg-3" src="assets/images/alexis-karpouzos-4488850_1280.jpg" alt="" width="720">
+                  <div class="col-lg-4  offset-lg-1  p-0 overflow-hidden shadow-lg">
+                      <img class="rounded-lg-3 img-fluid" src="assets/images/book.jpg" alt="a book on a chair by the beach" width="720">
                   </div>
                 </div>
               </div>
