--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <header class="container">
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">MyWebClass.org</a>
+                    <a class="navbar-brand" href="/">MyWebClass.org</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -45,9 +45,6 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Home</a>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="content.html">Content Template</a>
                             </li>
@@ -59,15 +56,15 @@
         <main>
             <div class="container my-5">
                 <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
-                  <div class="col-lg-7 p-3 p-lg-5 pt-lg-1">
+                  <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
                     <h1 class="display-6 fw-bold lh-1">Revolutionize your Teaching</h1>
-                    <p class="lead">Empower your students with cutting-edge web development skills. Join MyWebClass and discover advanced technologies that will transform your teaching and their learning journey.</p>
+                    <p class="lead">Empower your students with cutting-edge software engineering skills. Join MyWebClass and discover advanced technologies that will transform your teaching and their learning journey.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                       <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start Here</button>
                     </div>
                   </div>
                   <div class="col-lg-4  offset-lg-1  p-0 overflow-hidden shadow-lg">
-                      <img class="rounded-lg-3 img-fluid" src="assets/images/book.jpg" alt="a book on a chair by the beach" width="720">
+                      <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.png" alt="a teacher with students" width="720">
                   </div>
                 </div>
               </div>
@@ -77,6 +74,7 @@
                 <div class="col">
                     <h5>About Us</h5>
                     <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="our_story.html" class="nav-link p-0 text-muted">Our Story</a></li>
                         <li class="nav-item mb-2"><a href="privacy.html" class="nav-link p-0 text-muted">Privacy Policy</a></li>
 
                     </ul>
@@ -86,8 +84,6 @@
                     <h5>Share on Social Media</h5>
                     <ul class="nav">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-linkedin me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-instagram me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-github me-2"></i></a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-twitter me-2"></i></a></li>
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-facebook me-2"></i></a></li>
                     </ul>
@@ -104,8 +100,10 @@
                             <button class="btn btn-primary" type="button">Subscribe</button>
                         </div>
                     </form>
+
                 </div>
             </div>
+            <p>©2023 MyWebClass.org All rights reserved.</p>
         </footer>
     </div>
 </body>
