--- a/src/privacy.html
+++ b/src/privacy.html
@@ -4,7 +4,7 @@
 <head>
     <!--characterset UTF-8 Watch this: https://youtu.be/MijmeoH9LT4 -->
 
-    <title>MyWebClass.org</title>
+    <title>MyWebClass.org | Privacy Policy</title>
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,7 +37,7 @@
         <header class="container">
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">MyWebClass.org</a>
+                    <a class="navbar-brand" href="/">MyWebClass.org</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -45,9 +45,6 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="/">Home</a>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="content.html">Content Template</a>
                             </li>
@@ -57,8 +54,21 @@
             </nav>
         </header>
         <main class="mt-3 ms-1">
+            <div class="container-fluid">
+                <div class="row">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Privacy Policy</li>
+                    </ol>
+                </div>
+                <div class="row">
+                    <h1>Privacy Policy for MyWebClass</h1>
+                </div>
+            </div>
+
             <div class="row ">
-                    <h1 class="title">Privacy Policy for MyWebClass</h1>
+                <div class="col-md-8 ps-5 pe-5">
+
                     <p>Last updated: February 26, 2023</p>
                     <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure
                         of Your information when You use the Service and tells You about Your privacy rights and how the
@@ -384,8 +394,10 @@
                         Privacy Policy are effective when they are posted on this page.</p>
                     <h1>Contact Us</h1>
                     <p>If you have any questions about this Privacy Policy, You can contact us:</p>
-            </div>
+                </div>
+                <div class="col-6 col-md-4 themed-grid-col">.col-6 .col-md-4</div>
 
+            </div>
         </main>
         <footer class="py-5 container">
             <div class="row">
@@ -393,8 +405,11 @@
                     <h5>About Us</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link mb-2 p-0 text-muted active" aria-current="page"
-                                href="privacy.html">Privacy Policy</a>
+                        <li class="nav-item mb-2"><a href="our_story.html" class="nav-link p-0 text-muted">Our Story</a>
+                        </li>
+
+                        <a class="nav-link mb-2 p-0 text-muted active" aria-current="page" href="privacy.html">Privacy
+                            Policy</a>
                         </li>
                     </ul>
                 </div>
@@ -402,16 +417,9 @@
                 <div class="col-sm-3 ">
                     <h5>Share on Social Media</h5>
                     <ul class="nav">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
-                                    class="bi bi-linkedin me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
-                                    class="bi bi-instagram me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
-                                    class="bi bi-github me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
-                                    class="bi bi-twitter me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
-                                    class="bi bi-facebook me-2"></i></a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-linkedin me-2"></i></a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-twitter me-2"></i></a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-facebook me-2"></i></a></li>
                     </ul>
                 </div>
 
@@ -432,4 +440,5 @@
 
     </div>
 </body>
+
 </html>
