--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
             <div class="container my-5">
                 <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
                   <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-                    <h1 class="display-6 fw-bold lh-1">Revolutionize your Teaching</h1>
+                    <h1 class="display-6 fw-bold lh-1">Revolutionize your Learning</h1>
                     <p class="lead">Empower your students with cutting-edge software engineering skills. Join MyWebClass and discover advanced technologies that will transform your teaching and their learning journey.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                       <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start Here</button>
