fixing our story

--- a/src/our_story.html
+++ b/src/our_story.html
@@ -54,19 +54,11 @@
                 </div>
             </nav>
         </header>
+        <ol class="breadcrumb mt-3">
+            <li class="breadcrumb-item"><a href="/">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Our Story</li>
+        </ol>
         <main class="mt-3">
-            <div class="container-fluid">
-                <div class="row">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="/">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Our Story</li>
-                    </ol>
-                </div>
-                <div class="row">
-                    <p class="h1">Our Story</p>
-                </div>
-            </div>
-
             <div class="row">
 
                 <div class="col-md-8 ps-5 pe-5">
