--- a/src/index.html
+++ b/src/index.html
@@ -12,39 +12,30 @@
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
     <meta name="author" content="Keith Williams" />
-    <meta name="description" content="A project to provide educational resources to web development teachers">
+    <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
 
     <!--OpenGraph meta -->
     <meta property="og:title" content="" />
-    <meta property="og:description" content=""/>
-    <meta property="og:image" content="assets/images/logo.png"/>
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="assets/images/logo.png" />
     <meta property="og:url" content="" />
-
-    <!--meta for twitter
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:image" content="assets/images/logo.png">
-    <meta name="twitter:site" content="@me">
-    <meta name="twitter:description" content="">
-    -->
-
 
 </head>
 
-<body>
+<body class="pt-3">
     <div class="container-fluid">
-        <header class="container">
-            <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <div class="container-fluid">
+        <header role="banner" class="fixed-top">
+            <nav role="navigation" aria-label="Main navigation" class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container">
                     <a class="navbar-brand" href="/">MyWebClass.org</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
                         aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Toggle navigation</span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" href="content.html">Content Template</a>
                             </li>
@@ -56,36 +47,50 @@
         <main>
             <div class="container my-5">
                 <div class="row p-4 pb-0 pe-lg-0 pt-lg-0 align-items-center rounded-3 border shadow-lg ">
-                  <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
-                    <h1 class="display-6 fw-bold lh-1">Revolutionize your Learning</h1>
-                    <p class="lead">Empower your students with cutting-edge software engineering skills. Join MyWebClass and discover advanced technologies that will transform your teaching and their learning journey.</p>
-                    <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                      <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start Here</button>
+                    <div class="col-lg-7 p-3 p-lg-3 pt-lg-1">
+                        <h1 class="display-6 fw-bold lh-1">Revolutionize your teaching</h1>
+                        <p class="lead">Empower your students with cutting-edge software engineering skills. Join
+                            MyWebClass and discover advanced technologies that will transform your teaching and their
+                            learning journey.</p>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
+                            <button type="button" class="btn btn-success btn-lg px-4 me-md-2 fw-bold">Start
+                                Here</button>
+                        </div>
                     </div>
-                  </div>
-                  <div class="col-lg-4  offset-lg-1  p-0 overflow-hidden shadow-lg">
-                      <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.png" alt="a teacher with students" width="720">
-                  </div>
+                    <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                        <img class="rounded-lg-3 img-fluid" src="assets/images/teacher.png"
+                            alt="a teacher with students" width="720">
+                    </div>
                 </div>
-              </div>
+            </div>
         </main>
         <footer class="py-5 container">
             <div class="row">
                 <div class="col">
                     <h5>About Us</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="our_story.html" class="nav-link p-0 text-muted">Our Story</a></li>
-                        <li class="nav-item mb-2"><a href="privacy.html" class="nav-link p-0 text-muted">Privacy Policy</a></li>
+                        <li class="nav-item">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Our
+                                Story</a>
+                        </li>
 
+                        <a class="nav-link mb-2 p-0 text-muted active" aria-current="page" href="#">Privacy
+                            Policy</a>
+                        </li>
+                        </li>
                     </ul>
                 </div>
 
                 <div class="col-sm-3 ">
                     <h5>Share on Social Media</h5>
                     <ul class="nav">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-linkedin me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-twitter me-2"></i></a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i class="bi bi-facebook me-2"></i></a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                                    class="bi bi-linkedin me-2"></i></a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                                    class="bi bi-twitter me-2"></i></a>
+                        </li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
+                                    class="bi bi-facebook me-2"></i></a></li>
                     </ul>
                 </div>
 
@@ -100,10 +105,8 @@
                             <button class="btn btn-primary" type="button">Subscribe</button>
                         </div>
                     </form>
-
                 </div>
             </div>
-            <p>©2023 MyWebClass.org All rights reserved.</p>
         </footer>
     </div>
 </body>
