fixing some issues

--- a/src/content.html
+++ b/src/content.html
@@ -61,13 +61,13 @@
         <!-- Sidebar menu with scrollspy -->
         <nav id="sidebarMenu" class="col-md-2 col-lg-2 d-md-block bg-light sidebar collapse position-fixed">
           <div class="position-sticky pt-3">
-            <h2 class="text-center">Navigation</h2>
-            <!-- rest of the nav content here -->
+            <h2 class="justify-left">Navigation</h2>
+            <!-- Javascript builds out the navigation items -->
           </div>
         </nav>
 
         <!-- Main content area -->
-        <main class="col-md-8 ms-sm-auto col-lg-8 px-md-4">
+        <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
 
           <h1 id="title" class="fw-bold border-bottom">Article Title</h1>
           <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
@@ -206,7 +206,7 @@
         <footer class="py-5 container">
           <div class="row">
             <div class="col">
-              <h5>About Us</h5>
+              <h1>About Us</h1>
               <ul class="nav flex-column">
                 <li class="nav-item">
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Our
@@ -220,7 +220,7 @@
             </div>
 
             <div class="col-sm-3 ">
-              <h5>Share on Social Media</h5>
+              <h1>Share on Social Media</h1>
               <ul class="nav">
                 <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted"><i
                       class="bi bi-linkedin me-2"></i></a></li>
@@ -235,7 +235,7 @@
 
             <div class="col-md-5 offset-md-1 mb-3">
               <form>
-                <h5>Subscribe to our newsletter</h5>
+                <h1>Subscribe to our newsletter</h1>
                 <p>Monthly digest of what's new and exciting from us.</p>
                 <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                   <label for="newsletter1" class="visually-hidden">Email address</label>
