--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
             </div>
         </nav>
 
-		<div class="container>">
+		<div class="container">
 			<div class="row">
 				<div class="col-lg-9">
 					<h1 class="bd-title">Content Template</h1>
