added google analytics script to index.html, content.html, story.html, privacy.html & template-content.html

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -11,7 +11,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
+    <meta content="John Idone & Kevin Nipal" name="author"/>
     <meta content="The story and mission of MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
@@ -19,6 +19,18 @@
     <meta content="" property="og:description"/>
     <meta content="assets/images/logo.png" property="og:image"/>
     <meta content="" property="og:url"/>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '358513935');
+</script>
+
+
 </head>
 
 <body>
