updated Google analytics script

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -20,14 +20,14 @@
     <meta content="assets/images/logo.png" property="og:image"/>
     <meta content="" property="og:url"/>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-870X719634"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '358513935');
+  gtag('config', 'G-870X719634');
 </script>
 
 
