--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,14 @@
     <meta property="og:url" content=""/>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+<<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-870X719634"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '358513935');
+  gtag('config', 'G-870X719634');
 </script>
 
 
