--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <!--Basic meta info -->
     <meta name="keywords" content="My Webclass Homepage">
     <meta name="author" content="John Idone & Kevin Nipal"/>
-    <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
+    <meta name="description" content="A project to help educators integrate new technologies into their teaching">
 
     <!--OpenGraph meta -->
     <meta property="og:title" content=""/>
